RESOLVED FIXED217923
REGRESSION(r267175): Regressed NYTimes's DOM content loaded time by 400%
https://bugs.webkit.org/show_bug.cgi?id=217923
Summary REGRESSION(r267175): Regressed NYTimes's DOM content loaded time by 400%
WebKit Commit Bot
Reported 2020-10-19 15:08:51 PDT
https://trac.webkit.org/changeset/267175 broke the build: Regressed NYTimes's DOM content loaded time by 400% This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of r267175 (23.96 KB, patch)
2020-10-19 15:09 PDT, WebKit Commit Bot
no flags
WebKit Commit Bot
Comment 1 2020-10-19 15:09:02 PDT
Created attachment 411803 [details] REVERT of r267175 Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
Ryosuke Niwa
Comment 2 2020-10-19 15:10:56 PDT
EWS
Comment 3 2020-10-19 15:12:16 PDT
Committed r268695: <https://trac.webkit.org/changeset/268695> All reviewed patches have been landed. Closing bug and clearing flags on attachment 411803 [details].
Note You need to log in before you can comment on or make changes to this bug.