Cherry-pick r268695. rdar://problem/70702399

Unreviewed, reverting r267175 and r267779.
    https://bugs.webkit.org/show_bug.cgi?id=217923

    Regressed NYTimes's DOM content loaded time by 400%

    Reverted changesets:

    "MutationObserverRegistration should be ref counted"
    https://bugs.webkit.org/show_bug.cgi?id=216528
    https://trac.webkit.org/changeset/267175

    "Crash while loading a confluence page"
    https://bugs.webkit.org/show_bug.cgi?id=217111
    https://trac.webkit.org/changeset/267779

    Canonical link: https://commits.webkit.org/230647@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268695 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/230609.13@safari-611.1.4-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-611.1.4-branch@269005 268f45cc-cd09-0410-ab3c-d52691b4dbfc