Source/WebCore/dom/MutationObserver.cpp
@@ -120,26 +120,21 @@ void MutationObserver::disconnect()
 {
     m_pendingTargets.clear();
     m_records.clear();
-    auto registrationAndNodeList = WTF::compactMap(m_registrations, [](auto* registration) -> Optional<std::pair<Ref<Node>, Ref<MutationObserverRegistration>>> {
-        auto node = registration->stopObserving();
-        if (!node)
-            return WTF::nullopt;
-        return { { node.releaseNonNull(), makeRef(*registration) } };
-    });
-    for (auto& registrationAndNode : registrationAndNodeList)
-        registrationAndNode.first->unregisterMutationObserver(registrationAndNode.second.get());
+    HashSet<MutationObserverRegistration*> registrations(m_registrations);
+    for (auto* registration : registrations)
+        registration->node().unregisterMutationObserver(*registration);
 }
 
 void MutationObserver::observationStarted(MutationObserverRegistration& registration)
 {
-    auto result = m_registrations.add(&registration);
-    RELEASE_ASSERT(result.isNewEntry);
+    ASSERT(!m_registrations.contains(&registration));
+    m_registrations.add(&registration);
 }
 
 void MutationObserver::observationEnded(MutationObserverRegistration& registration)
 {
-    auto removed = m_registrations.remove(&registration);
-    RELEASE_ASSERT(removed);
+    ASSERT(m_registrations.contains(&registration));
+    m_registrations.remove(&registration);
 }
 
 void MutationObserver::enqueueMutationRecord(Ref<MutationRecord>&& mutation)
@@ -191,14 +186,18 @@ void MutationObserver::deliver()
 {
     ASSERT(canDeliver());
 
+    // Calling takeTransientRegistrations() can modify m_registrations, so it's necessary
+    // to make a copy of the transient registrations before operating on them.
+    Vector<MutationObserverRegistration*, 1> transientRegistrations;
     Vector<std::unique_ptr<HashSet<GCReachableRef<Node>>>, 1> nodesToKeepAlive;
     HashSet<GCReachableRef<Node>> pendingTargets;
     pendingTargets.swap(m_pendingTargets);
-    auto registrations = WTF::map(m_registrations, [](auto* registration) { return makeRef(*registration); });
-    for (auto& registration : registrations) {
+    for (auto* registration : m_registrations) {
         if (registration->hasTransientRegistrations())
-            nodesToKeepAlive.append(registration->takeTransientRegistrations());
+            transientRegistrations.append(registration);
     }
+    for (auto& registration : transientRegistrations)
+        nodesToKeepAlive.append(registration->takeTransientRegistrations());
 
     if (m_records.isEmpty()) {
         ASSERT(m_pendingTargets.isEmpty());
