Source/WebCore/dom/MutationObserverRegistration.h
@@ -33,7 +33,6 @@
 #include "GCReachableRef.h"
 #include "MutationObserver.h"
 #include <wtf/HashSet.h>
-#include <wtf/WeakPtr.h>
 #include <wtf/text/AtomString.h>
 #include <wtf/text/AtomStringHash.h>
 
@@ -41,11 +40,10 @@ namespace WebCore {
 
 class QualifiedName;
 
-class MutationObserverRegistration : public RefCounted<MutationObserverRegistration> {
+class MutationObserverRegistration {
     WTF_MAKE_FAST_ALLOCATED;
 public:
-    static Ref<MutationObserverRegistration> create(MutationObserver&, Node&, MutationObserverOptions, const HashSet<AtomString>& attributeFilter);
-
+    MutationObserverRegistration(MutationObserver&, Node&, MutationObserverOptions, const HashSet<AtomString>& attributeFilter);
     ~MutationObserverRegistration();
 
     void resetObservation(MutationObserverOptions, const HashSet<AtomString>& attributeFilter);
@@ -57,21 +55,18 @@ public:
     bool isSubtree() const { return m_options & MutationObserver::Subtree; }
 
     MutationObserver& observer() { return m_observer.get(); }
-    Node* node() { return m_node.get(); }
-    RefPtr<Node> stopObserving();
+    Node& node() { return m_node; }
     MutationRecordDeliveryOptions deliveryOptions() const { return m_options & (MutationObserver::AttributeOldValue | MutationObserver::CharacterDataOldValue); }
     MutationObserverOptions mutationTypes() const { return m_options & MutationObserver::AllMutationTypes; }
 
     void addRegistrationNodesToSet(HashSet<Node*>&) const;
 
 private:
-    MutationObserverRegistration(MutationObserver&, Node&, MutationObserverOptions, const HashSet<AtomString>& attributeFilter);
-
     Ref<MutationObserver> m_observer;
-    WeakPtr<Node> m_node;
-    bool m_hasStoppedObservingNode { false };
-    MutationObserverOptions m_options;
+    Node& m_node;
+    RefPtr<Node> m_nodeKeptAlive;
     std::unique_ptr<HashSet<GCReachableRef<Node>>> m_transientRegistrationNodes;
+    MutationObserverOptions m_options;
     HashSet<AtomString> m_attributeFilter;
 };
 
